# Mechatronics-2023

./: .gitignore  POOLTEST.md  README.md  README_distance_detector.md  distance_detector.py  log.txt
classes/: CMakeLists.txt  README.md
classes/ahrs_driver_lg/: ahrs.py
classes/distance_detector/: README.md  distance_detector.py
classes/filter/: CMakeLists.txt  coefficients.txt
classes/filter/include/: filter.hpp
classes/filter/src/: filter.cpp
classes/pid_controller/: CMakeLists.txt  README.md
classes/pid_controller/include/: pid_controller.hpp  pid_params.hpp  scion_pid_controller.hpp  vector_operations.hpp
classes/pid_controller/src/: pid_controller.cpp  pid_params.cpp  scion_pid_controller.cpp
classes/zed_position/: CMakeCache.txt  Makefile  cmake_install.cmake
classes/zed_position/include/: GLViewer.hpp  ZEDModel.hpp
classes/zed_position/src/: GLViewer.cpp  zed_position.cpp
classes/zed_vision/: visualizer.py  zed_vision.py
classes/zed_vision/ogl_viewer/: viewer.py
classes/zed_vision/yolov5/: README.dataset.txt  README.roboflow.txt  requirements.txt
classes/zed_vision/yolov5/data/: underwater.yaml
classes/zed_vision/yolov5/train/: labels.cache
classes/zed_vision/yolov5/utils/: general.py
classes/zed_vision/yolov5/valid/: labels.cache
ros2_ws/src/: CMakeLists.txt  README.md  launch.py  log.txt  minimal_launch.py  package.xml  topics.txt
ros2_ws/src/PID_Node/: PID_Subscriber.cpp
ros2_ws/src/a50_node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/a50_node/a50_node/: a50_publisher.py
ros2_ws/src/a50_node/include/: a50_node.hpp
ros2_ws/src/a50_node/src/: a50_node.cpp  main.cpp
ros2_ws/src/ahrs/: setup.py
ros2_ws/src/ahrs_node/: package.xml  setup.cfg  setup.py
ros2_ws/src/ahrs_node/ahrs_node/: ahrs_publisher.py
ros2_ws/src/brain_node/: CMakeLists.txt  package.xml
ros2_ws/src/brain_node/include/: brain_node.hpp
ros2_ws/src/brain_node/src/: brain_node.cpp  brain_test.cpp
ros2_ws/src/build-test_gui-Desktop-Debug/: test_gui.cbp  test_gui_exec
ros2_ws/src/build-test_gui-Desktop-Debug/test_gui_exec_autogen/: moc_predefs.h  mocs_compilation.cpp
ros2_ws/src/can2ros_driver/: CMakeLists.txt
ros2_ws/src/can2ros_driver/include/: can_mbox_pub.hpp
ros2_ws/src/can2ros_driver/src/: can_mailbox_topic.cpp  can_mbox_pub.cpp  can_send_service.cpp
ros2_ws/src/can_msg_interfaces/: log.txt
ros2_ws/src/can_msg_interfaces/srv/: log.txt
ros2_ws/src/control_interface/: CMakeLists.txt  control_interface.hpp  package.xml
ros2_ws/src/control_interface/include/: control_interface.hpp
ros2_ws/src/control_interface/src/: control_interface.cpp
ros2_ws/src/controller_node/: CMakeLists.txt  package.xml
ros2_ws/src/controller_node/include/: controller_node.hpp
ros2_ws/src/controller_node/src/: controller_node.cpp  main.cpp
ros2_ws/src/current_state_node/: CMakeLists.txt
ros2_ws/src/current_state_node/include/: current_state_node.hpp
ros2_ws/src/current_state_node/src/: current_state_node.cpp  main.cpp
ros2_ws/src/dres_dvl_decode/: CMakeLists.txt  package.xml
ros2_ws/src/dres_dvl_decode/include/: dres_decode_node.hpp  dvl_handler.hpp
ros2_ws/src/dres_dvl_decode/src/: dres_decode_node.cpp  dvl_handler.cpp
ros2_ws/src/dres_ms5837_decode/: README.md  package.xml
ros2_ws/src/dres_ms5837_decode/include/: device_macros.hpp  dres_decode_node.hpp
ros2_ws/src/dres_ms5837_decode/src/: dres_decode_node.cpp  ms5837_handler.cpp
ros2_ws/src/dvl_node/: CMakeLists.txt
ros2_ws/src/dvl_node/src/: dvl_node.cpp
ros2_ws/src/gui_node/: CMakeLists.txt  README.md  package.xml  styles.qss
ros2_ws/src/gui_node/include/: mainwindow.hpp  meow.hpp  pid_controller.hpp
ros2_ws/src/gui_node/src/: main.cpp  mainwindow.cpp  mainwindow.ui  meow.cpp  meow.ui  mission_planning.cpp  mission_planning.ui  pid_controller.cpp  pid_controller.ui
ros2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/launcher_node/: launcher_node.py  package.xml  setup.cfg  setup.py
ros2_ws/src/launcher_node/launcher_node/: launcher_node.py
ros2_ws/src/log/: latest_build
ros2_ws/src/mediator_node/: CMakeLists.txt  package.xml
ros2_ws/src/mediator_node/include/: mediator_node.hpp
ros2_ws/src/mediator_node/src/: main.cpp  mediator_node.cpp
ros2_ws/src/pid_node/: CMakeLists.txt  package.xml
ros2_ws/src/pid_node/include/: pid_node.hpp
ros2_ws/src/pid_node/src/: main.cpp  pid_client.cpp  pid_controller_node.cpp  pid_node.cpp  pid_subscriber.cpp
ros2_ws/src/py_pubsub/py_pubsub/: publisher_member_function.py
ros2_ws/src/pynput_node/: package.xml  setup.cfg  setup.py
ros2_ws/src/pynput_node/pynput_node/: pynput_node.py
ros2_ws/src/scion_types/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/scion_types/action/: PID.action
ros2_ws/src/scion_types/msg/: BoundingBox2Df.msg  BoundingBox2Di.msg  BoundingBox3D.msg  Keypoint2Di.msg  Meow.msg  Object.msg  ObjectsStamped.msg  PidTuning.msg  Skeleton2D.msg  Skeleton3D.msg  SubState.msg  ZedObject.msg
ros2_ws/src/scion_types/srv/: CanCommand.srv  SendFrame.srv
ros2_ws/src/test_gui/: CMakeLists.txt  Darkeum.qss  gui_home_page.cpp  gui_home_page.hpp  gui_home_page.ui  indigo.qss  package.xml
ros2_ws/src/test_gui/include/: mainwindow.hpp  mission_planning.hpp  pid_controller.hpp
ros2_ws/src/test_gui/src/: main.cpp  mainwindow.cpp  mainwindow.ui  mission_planning.cpp  mission_planning.ui  pid_controller.cpp  pid_controller.ui
ros2_ws/src/test_node/: CMakeLists.txt  package.xml
ros2_ws/src/unified_can_driver/: CMakeLists.txt  README.md  README.md.backup  log.txt  package.xml
ros2_ws/src/zed_orientation_node/: CMakeLists.txt  package.xml
ros2_ws/src/zed_pos_node/: CMakeLists.txt  package.xml
ros2_ws/src/zed_vision_node/: package.xml  setup.py
src/EMBEDDED_NODE/EMBEDDED_NODE_RP2040/: CMakeLists.txt  main.c
test/classes/: CMakeLists.txt  README.md  c_build_help.md
test/classes/ahrs_driver_lg/: ahrs.py
test/classes/filter/src/: filter.cpp
test/classes/pid_controller/: pid_controller.cpp
test/classes/zed_position/: CMakeLists.txt
(+2202 files in other folders)
