<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unified_can_driver</name>
  <version>0.0.2</version>
  <description>Unified CAN driver handling both frame filtering and decoding</description>
  <maintainer email="mechatronics@todo.todo">mechatronics</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <depend>rclcpp</depend>
    <depend>scion_types</depend>
  </export>
</package>
